MTSL-399 [Bug fix] - Fix overflow notification tab styles;

--- a/src/lwc/portalHeader/portalHeader.css
+++ b/src/lwc/portalHeader/portalHeader.css
@@ -298,7 +298,7 @@
   border: 2px solid rgba(51, 51, 255, 0.4);
   float: right;
   margin-top: 5px;
-  margin-right: 30px;
+  margin-right: 40px;
 }
 
 .circle:hover {
@@ -348,21 +348,21 @@
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 100px;
+  width: 90px;
   height: 27px;
   background-color: #fff;
   color: #000;
   font-size: 12px;
   text-align: center;
   font-weight: 500;
-  padding: 5px 0;
+  padding: 5px;
   position: absolute;
   z-index: 1;
-  right: -50px;
+  right: -40px;
   bottom: 10px;
   -webkit-box-shadow: 0px 0px 5px 0px #cfcfcf;
   -moz-box-shadow: 0px 0px 5px 0px #cfcfcf;
-  box-shadow: 0px 0px 5px 0px #cfcfcf;  
+  box-shadow: 0px 0px 5px 0px #cfcfcf;
 }
 
 .tooltip:hover .tooltiptext {
@@ -376,8 +376,4 @@
 
 .headerBarConatiner {
   height: calc(100% - 2px);
-}
-
-.tabNotificationCenter lightning-tab {
-  overflow: visible;
 }
